Fix the accessibility issues

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>projet_aciah</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Cookey | Projet ACIAH</title>
   </head>
   <body>
-    <div id="app"></div>
+    <mainv id="app"></mainv>
     <!-- built files will be auto injected -->
   </body>
 </html>
