--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta http-equiv="cache-control" content="max-age=86400" />
     <title>Cookey | Projet ACIAH</title>
   </head>
   <body>
