--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cookeys | Projet ACIAH</title>
   </head>
   <body>
-    <mainv id="app"></mainv>
+    <main id="app"></main>
     <!-- built files will be auto injected -->
   </body>
 </html>
